-------------
Version 0.7.2
-------------

TOOLKIT

  * General

- Added support for private CloudFront distributions (see below)
- Added support for the property "filecomparer.skip-symlinks" which causes
  symlink/alias files to be ignored by JetS3t applications when deciding
  which files to send to S3. Although "soft" links can be detected and 
  ignored, hard links cannot be detected and will be treated as ordinary 
  files.   
- Added support for the TargetGrants setting of logged S3 buckets. This
  allows you to set default ACL access permissions for S3 bucket logs
  generated by the service.
- JetS3t's JMX instrumentation delegate is now re-initialized each time a 
  new S3Service is created, allowing users to enable/disable JMX logging 
  by adjusting System properties after a JVM has started. Note that it is 
  still not possible to enable/disable Bucket- or Object-specific event 
  logging after the JVM has started.
- JMX logging for JetS3t can be enabled on Java 1.6 systems by including
  the "jets3t.mx" system property, since the "com.sun.management.jmxremote"
  property is no longer required to turn on JMX support in the JVM.
- Improved the Windows batch scripts to correctly detect the JETS3T_HOME
  location regardless of the current directory when the JetS3t script is run.

  * CloudFront Service Implementation

- Added support for creating and updating private distributions.
- Added support for creating and managing Origin Access Identifiers as
  required for private distributions.
- Added support for generating canned and custom-policy signed URLs for 
  private distributions that require request signing.

  * REST Implementation

- Added sanity-checking of HTTP header values as obtained from an S3Object's
  metadata map. Non-ASCII header names and header duplicates caused by
  capitalization mismatches now fail early with descriptive S3ServiceException
  errors.
- Fixed bug in signed-url based uploading that caused automatic ETag 